# ncnn_inference_test

./: CMakeLists.txt  readme.md
samples/: data.npy  mobilenetssd.param
scripts/: image2npy.py  image2npy.sh  run_mobilenet_ssd.sh
src/: npy.hpp  test.cpp  time_utility.cpp  time_utility.h
